# joycon-mapper-switch

./: app_build.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  joyconmapper.cpp
app/src/main/java/com/switchroot/joyconmapper/: JoyConMapperService.java  MainActivity.java  VirtualXboxController.java
app/src/main/res/xml/: accessibility_service_config.xml
